# BarcodeMaker

./: CMakeLists.txt
include/: archive.h  bit_string.h  buffer.h  debug_utils.h  qr_encode.h  qr_polynomials.h  qr_structure.h  qr_utils.h  utils.h
src/: bit_string.c  buffer.c  character_capacity_table.c  constant_tables.c  main.c  qr_encode.c  qr_polynomials.c  qr_structure.c  unit_tests.c
